<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CustomUIActivity">

    <LinearLayout
        android:id="@+id/card_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/card_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/card_number"
            android:inputType="number" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/card_expiry_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/mm_yy"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/card_holder_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/card_holders_name"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/card_cvv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/cvv"
            android:inputType="number" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/proceed_with_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/net_banking_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/background_dark" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/net_banking"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/background_dark" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/net_banking_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog" />

</LinearLayout>
